# jupyterlab-haddock3-configurator

./: .gitignore  .prettierignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml  pages.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
lite/: README.md  requirements.txt
schema/: plugin.json
src/: App.tsx  DocManagerContext.ts  FileWidget.tsx  FileWidgetContext.ts  app.tsx  factory.ts  haddock3.guru.json  index.ts  path2dataurl.tsx  widget.tsx
src/__tests__/: haddock3_configurator.spec.ts
style/: base.css
ui-tests/: package.json
ui-tests/tests/: haddock3_configurator.spec.ts
